<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20sdp"
    tools:context=".view.fragments.anantlaxman.AnantHomeFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/home_screen_img"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_heading_part1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/before_main_heading"
            android:textColor="@color/black"
            android:fontFamily="@font/laila_medium"
            android:textSize="@dimen/_9ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/main_heading_part1"
            android:textColor="@color/main_heading"
            android:textSize="@dimen/_25ssp"
            android:fontFamily="@font/laila_bold"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/ll_heading_part2"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30sdp"
        android:fontFamily="@font/laila_bold"
        android:text="@string/main_heading_part2"
        android:textColor="@color/main_heading"
        android:textSize="@dimen/_25ssp"
        app:layout_constraintTop_toBottomOf="@+id/ll_heading_part1"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_heading_part3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_heading_part2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_32sdp"
            android:text="@string/main_heading_part3"
            android:textColor="@color/main_heading"
            android:textSize="@dimen/_25ssp"
            android:fontFamily="@font/laila_bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anant_first_name"
                android:textColor="@color/black"
                android:fontFamily="@font/laila_medium"
                android:textSize="@dimen/_12ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textSize="@dimen/_12ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anant_last_name"
                android:textColor="@color/black"
                android:fontFamily="@font/laila_medium"
                android:textSize="@dimen/_12ssp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/homeDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_description"
        android:layout_marginTop="@dimen/_7sdp"
        android:fontFamily="@font/laila_regular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/ll_heading_part3" />

    <Button
        android:id="@+id/readMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/laila_medium"
        android:text="@string/readMore"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>