<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:paddingHorizontal="@dimen/_15sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.anantlaxman.AnantRevolutionaryFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:scrollbarSize="@dimen/_8sdp"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@id/backBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_bold"
                android:text="@string/anant_heading10"
                android:textColor="@color/red"
                android:textSize="@dimen/_16ssp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title10"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/laila_semibold"
                android:text="@string/anant_heading11"
                android:textColor="@color/text_orange"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title11"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/laila_semibold"
                android:text="@string/anant_heading12"
                android:textColor="@color/text_orange"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title12"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/laila_semibold"
                android:text="@string/anant_heading13"
                android:textColor="@color/text_orange"
                android:textSize="@dimen/_10ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title13"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/text_orange"
                android:fontFamily="@font/laila_semibold"
                android:text="@string/anant_heading14"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title14"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:fontFamily="@font/laila_semibold"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/text_orange"
                android:text="@string/anant_heading15"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_medium"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/black"
                android:text="@string/anant_heading15.1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title15.1"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_medium"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/black"
                android:text="@string/anant_heading15.2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title15.2"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text=""/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_medium"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/black"
                android:text="@string/anant_heading15.3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_regular"
                android:text="@string/anant_title15.3"
                android:textColor="@color/black"
                android:textSize="@dimen/_9ssp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/backBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/white"
        android:textColor="@color/back_button"
        android:fontFamily="@font/laila_semibold"
        android:textSize="@dimen/_9ssp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>