<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/laila_medium"
            android:textColor="@color/white"
            android:textSize="@dimen/_8ssp"
            android:text="@string/change_language" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnHindi"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:text="@string/language_hindi"
                android:visibility="visible"
                android:fontFamily="@font/laila_medium"
                android:backgroundTint="@color/red"
                android:layout_marginEnd="@dimen/_10sdp" />

            <Button
                android:id="@+id/btnEnglish"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:text="@string/language_english"
                android:visibility="visible"
                android:fontFamily="@font/laila_medium"
                android:backgroundTint="@color/red" />

            <Button
                android:id="@+id/btnMarathi"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="wrap_content"
                android:text="@string/language_marathi"
                android:visibility="gone"
                android:fontFamily="@font/laila_medium"
                android:backgroundTint="@color/red" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>